# Modern-Cpp-templates-tutorial

./: .gitignore  LICENSE  README.md  SUMMARY.md  package-lock.json  package.json
.github/workflows/: deploy.yml
.vitepress/: config.mjs
.vitepress/theme/: NotFound.vue  index.css  index.js  params.js
code/01模板分文件/: CMakeLists.txt  main.cpp  test.cpp  test.h  test_template.cpp  test_template.h
code/02include指令/: 1.txt  README.md  main.cpp  main2.cpp
code/03显式实例化解决模板分文件问题/: main.cpp  test_class_template.cpp  test_function_template.cpp
code/03类模板分文件/: CMakeLists.txt  main.cpp  test_class.cpp  test_class.h  test_class_template.cpp  test_class_template.h
code/04显式实例化解决模板分文件问题/: CMakeLists.txt  main.cpp  test_class_template.cpp  test_class_template.h  test_function_template.h
code/05显式实例化解决模板导出动态静态库问题/: 05显式实例化解决模板导出动态静态库问题.sln  05显式实例化解决模板导出动态静态库问题.vcxproj  CMakeLists.txt  export_template.h  run_test.cpp.cpp
code/05显式实例化解决模板导出动态静态库问题/x64/Debug/: 生成动态库.lib
code/99 群友示例/: Shinshi.cpp
code/测试使用静态库/: run_test.cpp.cpp  测试使用静态库.vcxproj  测试使用静态库.vcxproj.filters
code/生成动态库/: export_template.cpp  export_template.h  生成动态库.vcxproj  生成动态库.vcxproj.filters
code/生成静态库/: export_template.cpp  export_template.h  生成静态库.vcxproj
homework/: README.md
homework/08折叠表达式作业/: mq卢瑟.md  mq日.md  ooolize.md  roseveknif.md  saidfljwnzjasf.md  我是男孩.md  提莫大绅士.md
image/捐赠/: README.md  thanks.md
md/扩展知识/: CRTP的原理与使用.md
md/第一部分-基础知识/: 01函数模板.md  02类模板.md  03变量模板.md  04模板全特化.md  05模板偏特化.md  05模板显式实例化解决模板分文件和导出dll等问题.md  06模板显式实例化解决模板分文件和导出dll等问题.md  06模板显式实例化解决模板分文件问题.md  07显式实例化解决模板导出静态动态库.md  07模板显式实例化解决模板分文件和导出dll等问题.md  08折叠表达式.md  09待决名.md  10了解与利用SFINAE.md  11约束与概念.md  12总结.md
md/第二部分-造轮子/: Linux中封装POSIX接口编写thread类.md  使用模板包装C风格API进行调用.md
src/: README.md
src/第一部分-基础知识/: 01函数模板.md  02类模板.md
